tests/success/branchingReturn.rs
fn main() {
    let mut x: i32 = 0;
}

main();